--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                 </div>
                 <input class="button" type="submit" value="Register" />
               </form>
-              <p class="credit">Developed by<a href="#" target="_blank"> DATAPIRATES ☠️</a></p>
+              <p class="credit">Developed by<a href="https://github.com/TeamDatapirates" target="_blank"> DATAPIRATES ☠️</a></p>
             </div>
           </div>
         </div>
